# starlink

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
include/: starlink_defs.hpp
kernels/: beam_detector.cu
src/: blind_spot_tracker.py  c2_solver.py  injector.py  main.cu
src/viz/: c2_bridge.py  dashboard.html
